# MixedPickingInventoryModel

./: .gitignore  PolicyEvaluation.py  PolicyEvaluationRandomPicking.py  PolicyEvaluationSL.py  PolicyEvaluation_waste_shortage.py  README.md  binom_cython.c  perishable_optimal.py  pyproject.toml  setup.py  test_m_3.py  test_pol_eval.py  test_pol_random_picking.py
src/mixedpickinginventorymodel/OptimalPolicy/: perishable_optimal.py
src/mixedpickinginventorymodel/PolicyEvaluation/: PolicyEvaluation.py  PolicyEvaluationRandomPicking.py  PolicyEvaluationSL.py  PolicyEvaluation_waste_shortage.py
src/mixedpickinginventorymodel/c/: binom_cython.pyx
tests/: test_SL_pol.py  test_m_3.py  test_pol_eval.py  test_pol_random_picking.py
