[project]
name = "mixedpickinginventorymodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.0.11",
    "numpy>=2.2.2",
    "scipy>=1.15.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
ext-modules = [
    {name = "mixedpickinginventorymodel.binom_cython", sources = ["src/mixedpickinginventorymodel/c/binom_cython.c"]}
]
